# bear-rust

./: .gitignore  Cargo.toml  README.md
.claude/: settings.json
.claude/skills/commit-and-push/: SKILL.md
.claude/skills/handoff/: SKILL.md
.devcontainer/: bashrc-settings  devcontainer.json
.github/: CODEOWNERS
scripts/: install_base_packages.sh
src/: claude_code_client.rs  ui.rs
src/ui/: app.rs  clarification.rs  coding.rs  file_validation.rs  planning.rs  renderer.rs  session_naming.rs  spec_writing.rs
