[package]
name = "workspace"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
which = "7"
uuid = { version = "1", features = ["v4"] }
ratatui = "0.29"
crossterm = "0.28"
unicode-width = "0.2"
chrono = "0.4"

[dev-dependencies]
tempfile = "3"
